--- a/src/pages/integraldata/integraldata.less
+++ b/src/pages/integraldata/integraldata.less
@@ -43,7 +43,7 @@
     .rowGrids {
       margin-top: 15px;
     }
-    .inputSearch {
+    .inputSearch,.rangePeri {
       width: calc(100% - 3px);
     }
   }
